--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>backend</name>
+	<description>Backend project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -26,6 +26,27 @@
 			<artifactId>json</artifactId>
 			<version>20220320</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.azure</groupId>
+    		<artifactId>azure-storage-blob</artifactId>
+    		<version>12.13.0</version>
+		</dependency>
+
+		<!--
+		<dependency>
+    		<groupId>com.azure</groupId>
+    		<artifactId>azure-cognitiveservices-customvision-training</artifactId>
+    		<version>1.1.0-preview.2</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>com.azure</groupId>
+    		<artifactId>azure-cognitiveservices-customvision-prediction</artifactId>
+    		<version>1.1.0-preview.2</version>
+		</dependency>
+		-->
+    
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
